--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 40%;
+    width: 35%;
     gap: 10px;
 }
 
@@ -38,6 +38,10 @@ body {
 
         height: 10vh;
         font-size: 25px;
+    }
+    .container{
+
+        width:70%;
     }
 
 }
